<resources>
    <string name="app_name" translatable="false">RiceGrow</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="drawer_open" translatable="false">drawer_open</string>
    <string name="drawer_close" translatable="false">drawer_close</string>
    <string name="general">General</string>
    <string name="choose_your_language_to_use_the_app">Choose your language to use the app:</string>
    <string name="language">Language</string>
    <string name="notification">Notification</string>
    <string name="daily_reminder_of_farming_plans">Daily reminder of farming plans</string>
    <string name="automatic_notifications_at_7_00_am_and_13_00_pm">Automatic notifications at 7:00 AM and 13:00 PM</string>
    <string name="reminder_every_time_start_the_app">Reminder every time start the app</string>
    <string name="weather">Weather</string>
    <string name="choose_your_weather_temperature_unit_to_use">Choose your weather temperature unit to use</string>
    <string name="the_current_is">The current is</string>
    <string name="welcome_to_ricegrow_app">Welcome to Rice Grow App!</string>
    <string name="fertilizer_calculator">Fertilizer Calculator</string>
    <string name="plan_generator">Plan generator</string>
    <string name="recent_farming_plans">Recent farming plans</string>
    <string name="no_farming_plans_please_inserting_the_new_one">No farming plans! Please inserting the new one!</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="connect_to_the_internet_to_use_the_weather_forecast">Connect to the internet to use the weather forecast!</string>
    <string name="empty">Empty</string>
    <string name="wind">Wind:</string>
    <string name="humidity">Humidity:</string>
    <string name="today_is_not_suitable_to">Today is not suitable to:</string>
    <string name="tap_to_receive_the_weather_at_your_location">Tap to receive the weather at your location</string>
    <string name="home">Home</string>
    <string name="plan">Plan</string>
    <string name="calculator">Calculator</string>
    <string name="knowledge">Knowledge</string>
    <string name="the_amount_of_nutrients">The amount of nutrients</string>
    <string name="reset">Reset</string>
    <string name="measured_in_kilograms_kg_default_is_the_recommended_amount_of_nutrition_from_the_experts_for_1_ha_10000_m">Measured in kilograms (kg). Default is the recommended amount of nutrition from the experts for 1 ha (10000 m²)</string>
    <string name="field_area">Field area</string>
    <string name="unit">Unit</string>
    <string name="square_meters_m">Square meters (m²)</string>
    <string name="hectare_ha">Hectare (ha)</string>
    <string name="calculate">Calculate</string>
    <string name="the_amount_of_fertilizers_recommended_to_use_corresponds_to_the_season">The amount of fertilizers recommended to use corresponds to the season:</string>
    <string name="recommended_amount">Recommended amount</string>
    <string name="view_detail">View detail</string>
    <string name="types_of_fertilizers">Types of fertilizers:</string>
    <string name="signs_of_a_lack_of_nutrients">Signs of a lack of nutrients:</string>
    <string name="planning">Planning</string>
    <string name="all_plans">All plans</string>
    <string name="new_plan">New plan</string>
    <string name="calculating">Calculating</string>
    <string name="pesticide">Pesticide</string>
    <string name="fertilizer">Fertilizer</string>
    <string name="management">Management</string>
    <string name="pest">Pest</string>
    <string name="disease">Disease</string>
    <string name="weed">Weed</string>
    <string name="deficiencies_and_toxicities">Deficiencies and toxicities</string>
    <string name="other">Other</string>
    <string name="setting">Setting</string>
    <string name="terms">Terms</string>
    <string name="licences">Licences</string>
    <string name="logout">Logout</string>
    <string name="monthly">Monthly</string>
    <string name="weekly">Weekly</string>
    <string name="daily">Daily</string>
    <string name="temperature_unit">Temperature unit</string>
    <string name="description">Description:</string>
    <string name="duration">Duration:</string>
    <string name="descriptions">Descriptions</string>
    <string name="growth_period">Growth period</string>
    <string name="retail_price">Retail price</string>
    <string name="salt_tolerance">Salt tolerance</string>
    <string name="harmful_pests">Harmful pests</string>
    <string name="sorry_the_information_is_being_updated">Sorry, the information is being updated!</string>
    <string name="potential_diseases">Potential diseases</string>
    <string name="weed_threats">Weed threats</string>
    <string name="symptoms">Symptoms</string>
    <string name="prevention_methods">Prevention methods</string>
    <string name="specialized_fertilizers">Specialized fertilizers</string>
    <string name="possible_stages_of_disease_outbreaks">Possible stages of disease outbreaks</string>
    <string name="specialized_pesticides">Specialized pesticides</string>
    <string name="duration_nodot">Duration</string>
    <string name="in_stage">In stage</string>
    <string name="start_date">Start date:</string>
    <string name="recommended_pesticides_or_fertilizers">Recommended pesticides or fertilizers</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="composition">Composition</string>
    <string name="instruction">Instruction</string>
    <string name="recommended_usage">Recommended usage</string>
    <string name="used_in_activities">Used in activities</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_login">Back to Login</string>
    <string name="farming_activities">Farming activities</string>
    <string name="clicking_to_search">Clicking to search</string>
    <string name="searching_something">Searching something</string>
    <string name="result">Result:</string>
    <string name="no_matching_results">No matching results</string>
    <string name="crop_varieties">Crop varieties</string>
    <string name="diseases">Diseases</string>
    <string name="fertilizers">Fertilizers</string>
    <string name="pests">Pests</string>
    <string name="pesticides">Pesticides</string>
    <string name="category">Category</string>
    <string name="growth_stages">Growth stages</string>
    <string name="weeds">Weeds</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_as_a_guest">Login as a Guest</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="plan_calendar">Crop Calendar</string>
    <string name="science_name">Science name</string>
    <string name="lifecycle">Lifecycle</string>
    <string name="control_methods">Control methods</string>
    <string name="possible_stages_of_pest_outbreaks">Possible stages of pest outbreaks</string>
    <string name="dosage_per_use_16_liter_bottle">Dosage per use (16-liter bottle)</string>
    <string name="amount_of_water_sprayed">Amount of water sprayed</string>
    <string name="specializes_in_treating">Specializes in treating</string>
    <string name="can_be_used_in">Can be used in</string>
    <string name="more_info_here">More info here</string>
    <string name="spray_bottle_capacity">Spray bottle capacity</string>
    <string name="_16_liters">16 liters</string>
    <string name="_18_liters">18 liters</string>
    <string name="_20_liters">20 liters</string>
    <string name="_25_liters">25 liters</string>
    <string name="the_amount_of_pesticides_recommended_to_use">The amount of pesticides recommended to use:</string>
    <string name="spray_bottle_capacity_dot">Spray bottle capacity:</string>
    <string name="amount_of_pesticides_per_spray_bottle">Amount of pesticides per spray bottle:</string>
    <string name="total_amount_of_needed_pesticides">Total amount of needed pesticides:</string>
    <string name="total_amount_of_water">Total amount of water:</string>
    <string name="total_number_of_spray_bottles">Total number of spray bottles:</string>
    <string name="note_expert_recommended_pesticide_amounts_provided_above_can_be_customized_to_your_specific_situation">Note: Expert-recommended pesticide amounts provided above can be customized to your specific situation.</string>
    <string name="specializes_in_treating_dot">Specializes in treating:</string>
    <string name="pesticide_calculator">Pesticide calculator</string>
    <string name="new_plan_generator">New Plan Generator</string>
    <string name="enter_the_sowing_date_area_and_rice_variety_to_generate_customized_plans">Enter the following necessary information to generate customized plans.</string>
    <string name="plan_name">Plan name</string>
    <string name="name">Name</string>
    <string name="sowing_date">Starting Date</string>
    <string name="date">Date</string>
    <string name="select_stages">Select stages</string>
    <string name="hide_show_stages">Hide/Show Stages</string>
    <string name="select_all">Select All</string>
    <string name="please_select_at_least_one_stage">Please select at least one stage!</string>
    <string name="area">Area</string>
    <string name="rice_variety">Rice Variety</string>
    <string name="rice_varieties">Rice varieties</string>
    <string name="plan_color_optional">Plan color (Optional)</string>
    <string name="pick_color">Pick Color</string>
    <string name="generate">Generate</string>
    <string name="re_password">Re-Password</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="select_pesticides_to_calculate">Select pesticides to calculate</string>
    <string name="start_date_nodot">Start date</string>
    <string name="end_date">End date</string>
    <string name="relevant_activities">Relevant activities</string>
    <string name="recommended_fertilizers">Recommended fertilizers</string>
    <string name="fertilizing_guide">Fertilizing guide</string>
    <string name="note_expert_recommended_fertilizer_amounts_provided_below_can_be_customized_to_your_specific_situation">Note: Expert-recommended fertilizer amounts provided below can be customized to your specific situation.</string>
    <string name="primary_fertilizing">Primary fertilizing</string>
    <string name="tillering_stage_36th_55th_day">Tillering stage (36th - 55th day)</string>
    <string name="according_to_the_amount_as_follows">According to the amount as follows:</string>
    <string name="secondary_fertilizing">Secondary fertilizing</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms and Conditions></string>
    <string name="supporter">Supporter</string>
    <string name="write_here">Write here</string>
    <string name="connect_to_internet_to_use_chat_supporter">Connect to internet to use chat supporter!</string>
</resources>