<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/planning_items"
            android:title="@string/planning">
            <menu>
                <item
                    android:id="@+id/allPlan"
                    android:title="@string/all_plans"
                    android:icon="@drawable/planning"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/newPlan"
                    android:title="@string/new_plan"
                    android:icon="@drawable/new_plan"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
            </menu>
        </item>

        <item
            android:id="@+id/calculating"
            android:title="@string/calculating">
            <menu>
                <item
                    android:id="@+id/pesticide"
                    android:icon="@drawable/pesticide"
                    android:title="@string/pesticide"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/fertilizer"
                    android:icon="@drawable/fertilizer"
                    android:title="@string/fertilizer"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
            </menu>
        </item>

        <item
            android:id="@+id/information"
            android:title="@string/management">
            <menu>
                <item
                    android:id="@+id/pest"
                    android:icon="@drawable/pest"
                    android:title="@string/pest"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/disease"
                    android:icon="@drawable/disease"
                    android:title="@string/disease"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/weed"
                    android:icon="@drawable/weed"
                    android:title="@string/weed"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/deftox"
                    android:icon="@drawable/deftox"
                    android:title="@string/deficiencies_and_toxicities"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
            </menu>
        </item>

        <item
            android:id="@+id/others"
            android:title="@string/other">
            <menu>
                <item
                    android:id="@+id/setting"
                    android:icon="@drawable/ic_setting"
                    android:title="@string/setting"
                    android:checkable="true"
                    app:showAsAction="ifRoom"/>
                <item
                    android:id="@+id/term"
                    android:icon="@drawable/licence"
                    android:title="@string/terms_conditions"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/licence"
                    android:icon="@drawable/term"
                    android:title="@string/privacy_policy"
                    android:checkable="true"
                    app:showAsAction="ifRoom" />
            </menu>
        </item>

    </group>

</menu>
