<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30dp"
    tools:context=".Activity.Calculating.FertilizerCalculating.ViewFerCalculate">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/coordinator"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/login_background"
            android:fitsSystemWindows="true"
            app:liftOnScroll="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbarSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/login_background"
                app:navigationIcon="@drawable/back"
                app:title="@string/setting" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10sp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/button_bg"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_your_language_to_use_the_app"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/languageDropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="true"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/TextInputLayoutError"
                    app:hintTextColor="@color/logo_tint"
                    android:hint="@string/language"
                    app:boxStrokeColor="@color/logo_tint">

                    <AutoCompleteTextView
                        android:id="@+id/languageAutoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="none"
                        android:textStyle="bold"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:dividerColor="#D9D9D9"
                    app:dividerThickness="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/button_bg"
                    android:layout_marginTop="10dp"/>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchDaily"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/daily_reminder_of_farming_plans"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    style="@style/Widget.App.Switch"
                    app:switchPadding="35dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/automatic_notifications_at_7_00_am_and_13_00_pm"
                    android:textSize="16sp"
                    android:textStyle="italic"/>

                <com.google.android.material.materialswitch.MaterialSwitch
                    android:id="@+id/switchStart"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:checked="true"
                    android:text="@string/reminder_every_time_start_the_app"
                    style="@style/Widget.App.Switch"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:dividerColor="#D9D9D9"
                    app:dividerThickness="3dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/button_bg"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_your_weather_temperature_unit_to_use"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"/>

                <LinearLayout
                    android:id="@+id/layoutWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/the_current_is"
                        android:textSize="18sp"
                        android:textStyle=""
                        android:layout_marginTop="10dp"/>

                    <TextView
                        android:id="@+id/txtUnitWeather"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Celsius (°C)"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"/>

                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>
